--- a/app/src/main/res/layout/fragment_cambio_divisas.xml
+++ b/app/src/main/res/layout/fragment_cambio_divisas.xml
@@ -6,7 +6,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/black">
 
     <TextView
         android:id="@+id/titulo"
@@ -14,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:text="Cambia tus divisas: Inserte su monto requerido"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.457"
@@ -26,6 +28,7 @@
         android:layout_height="64dp"
         android:layout_marginTop="148dp"
         android:hint="Ingrese monto"
+        android:textColor="@color/white"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +40,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="244dp"
         android:entries="@array/tipo_divisa"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,6 +63,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="420dp"
         android:text="Resultado"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
